--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,6 @@
 .container{
     height: 100%;
+    min-width: 750px;
 
     /* Center and scale the image nicely */
     background: url("https://slevomat.sgcdn.cz/images/t/1280/11/45/11456672-186820.webp") no-repeat center;
@@ -22,12 +23,14 @@
     position: center;
     text-align: center;
     width: 70%;
+    min-width: 500px;
     background: rgba(255, 238, 128, 0.9);
     font-size: 20px;
     border-style: solid;
     border-width: 3px;
     border-radius: 1em;
     padding-left: 2em;
+    padding-right: 2em;
     padding-top: -1em;
 }
 
