--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,7 +7,7 @@
 
     /*background: url("assets/imgs/items/armors/1.png") no-repeat center; */
      /* background: url("/assets/imgs/background.png") no-repeat fixed center; */
-    background-image: url("./assets/background.png");
+    background: url("./src/assets/background.png");
 
     background-size: cover;
 
